--- a/csscode.css
+++ b/csscode.css
@@ -1,97 +1,97 @@
 @import url("https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  box-sizing: border-box;
 }
 .max-width {
-    max-width: 1300px;
-    padding: 0 80px;
-    margin: auto;
+  max-width: 1300px;
+  padding: 0 80px;
+  margin: auto;
 }
 
 /*navigationbar*/
 .navbar {
-    padding: 30px 0;
-    position: fixed;
-    width: 100%;
-    font-family: prompt;
-    transition: all 0.3s ease;
-    z-index: 999;
+  padding: 30px 0;
+  position: fixed;
+  width: 100%;
+  font-family: prompt;
+  transition: all 0.3s ease;
+  z-index: 999;
 }
 .navbar.sticky {
-    background: #ff6600;
-    padding: 15px 0;
+  background: #ff6600;
+  padding: 15px 0;
 }
 .navbar.sticky .logo a span {
-    color: white;
+  color: white;
 }
 .navbar .logo a {
-    color: white;
-    font-size: 35px;
-    font-weight: 600;
+  color: white;
+  font-size: 35px;
+  font-weight: 600;
 }
 .navbar .logo a span {
-    color: #ff6600;
-    transition: all 0.3s ease;
+  color: #ff6600;
+  transition: all 0.3s ease;
 }
 .navbar .max-width {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .navbar .menu li {
-    list-style: none;
-    display: inline-block;
+  list-style: none;
+  display: inline-block;
 }
 .navbar .menu li a {
-    color: white;
-    font-size: 18px;
-    font-weight: normal;
-    margin-left: 30px;
-    transition: color 0.3s ease;
+  color: white;
+  font-size: 18px;
+  font-weight: normal;
+  margin-left: 30px;
+  transition: color 0.3s ease;
 }
 .navbar .menu li a:hover {
-    color: #ff6600;
+  color: #ff6600;
 }
 .navbar.sticky .menu li a:hover {
-    color: #380058;
+  color: #380058;
 }
 /*hamburgurbar*/
 .menu-btn {
-    color: white;
-    font-size: 30px;
-    cursor: pointer;
-    display: none;
+  color: white;
+  font-size: 30px;
+  cursor: pointer;
+  display: none;
 }
 
 /*home section*/
 .home {
-    display: flex;
-    background: url("img/covercode.jpg") no-repeat center;
-    height: 100vh;
-    background-size: cover;
-    color: white;
-    min-height: 500px;
-    font-family: prompt;
+  display: flex;
+  background: url("img/covercode.jpg") no-repeat center;
+  height: 100vh;
+  background-size: cover;
+  color: white;
+  min-height: 500px;
+  font-family: prompt;
 }
 .home .max-width {
-    margin: auto 0 auto 10px;
+  margin: auto 0 auto 10px;
 }
 .home .home-content .text-1 {
-    font-size: 50px;
-    font-weight: 600;
-    margin-left: -3px;
+  font-size: 50px;
+  font-weight: 600;
+  margin-left: -3px;
 }
 .home .home-content .text-1 span {
-    color: #ff6600;
-    font-weight: 600;
+  color: #ff6600;
+  font-weight: 600;
 }
 
 /*Profile section*/
 section {
-    padding: 50px 0;
+  padding: 50px 0;
 }
 
 /* all covered style*/
@@ -99,342 +99,368 @@ section {
 .products,
 .web,
 footer {
-    font-family: prompt;
+  font-family: prompt;
 }
 .about .about-content,
 .web .web-content {
-    display: flex;
-    align-content: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 section .title {
-    position: relative;
-    font-family: prompt;
-    font-size: 40px;
-    font-weight: 500;
-    text-align: center;
-    margin-bottom: 60px;
-    padding-bottom: 20px;
+  position: relative;
+  font-family: prompt;
+  font-size: 40px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 60px;
+  padding-bottom: 20px;
 }
 section .title::before {
-    content: "";
-    bottom: 0px;
-    left: 50%;
-    position: absolute;
-    width: 180px;
-    height: 3px;
-    background: black;
-    transform: translateX(-50%);
+  content: "";
+  bottom: 0px;
+  left: 50%;
+  position: absolute;
+  width: 180px;
+  height: 3px;
+  background: black;
+  transform: translateX(-50%);
 }
 section .title::after {
-    font-size: 20px;
-    color: #ff6600;
-    bottom: -15px;
-    left: 50%;
-    position: absolute;
-    padding: 5px;
-    background: white;
-    transform: translateX(-50%);
+  font-size: 20px;
+  color: #ff6600;
+  bottom: -15px;
+  left: 50%;
+  position: absolute;
+  padding: 5px;
+  background: white;
+  transform: translateX(-50%);
+}
+.golink2{
+    color: rgb(0, 0, 0);
+}
+.golink2{
+    color: white;
+}
+.golink1,
+.golink2 {
+  text-decoration: none;
+}
+.golink1:hover,
+.golink2:hover {
+  text-decoration: underline;
 }
 /* all purple background*/
 .products,
 .video3,
+.video0-1,
 .video1-1,
 .video1-2 {
-    color: white;
-    background: #67009e;
+  color: white;
+  background: #67009e;
 }
 .products .title::before,
 .video3 .title::before,
 .video1-1 .title::before,
+.video0-1 .title::before,
 .video1-2 .title::before {
-    background: white;
+  background: white;
 }
 .products .title::after,
 .video3 .title::after,
+.video0-1 .title::after,
 .video1-1 .title::after,
-.video1-2  .title::after{
-    background: #67009e;
+.video1-2 .title::after {
+  background: #67009e;
 }
 
 /*production title*/
 .video0 .title::after {
-    content: "Intern Project";
+  content: "Intern Project";
+}
+.video0-1 .title::after {
+  content: "Thesis Project";
 }
 .video1 .title::after {
-    content: "Port Website";
+  content: "Port Website";
 }
-.video1-1 .title::after{
-    content: "By ASP.Net";
+.video1-1 .title::after {
+  content: "By ASP.Net";
 }
-.video1-2 .title::after{
-    content: "Vue JS & API";
+.video1-2 .title::after {
+  content: "Vue JS & API";
 }
 .video2 .title::after {
-    content: "By Python";
+  content: "By Python";
 }
 .video3 .title::after {
-    content: "By Python";
+  content: "By Python";
 }
 .video4 .title::after {
-    content: "App Inventor";
+  content: "App Inventor";
 }
 /*container logo*/
 .container-logo {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .container-logo .imgcontain {
-    margin: 10px;
+  margin: 10px;
 }
 .container-logo .imgcontain img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .interncontainer {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 /*container style*/
 .container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .containerp {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
 }
 .containerp img {
-    width: 500px;
-    transition: all 0.3s ease;
+  width: 500px;
+  transition: all 0.3s ease;
 }
 .container p,
 .video0 .max-width p,
-.video1 .max-width p{
-    font-family: prompt;
+.video0-1 .max-width p,
+.video1 .max-width p {
+  font-family: prompt;
 }
 .video1 .max-width p,
 .video0 .max-width p,
+.video0-1 .max-width p,
 .video1-2 .max-width p {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .container-pic {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 .container-pic img {
-    width: 300px;
-    transition: all 0.3s ease;
+  width: 300px;
+  transition: all 0.3s ease;
 }
 .container-pic img:hover,
 .containerp img:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 .video1 .max-width h2,
 .video0 .max-width h2,
+.video0-1 .max-width h2,
 .video1-1 .max-width h2,
-.video1-2 .max-width h2{
-    font-family: prompt;
-    display: flex;
-    justify-content: center;
-    margin: 30px;
+.video1-2 .max-width h2 {
+  font-family: prompt;
+  display: flex;
+  justify-content: center;
+  margin: 30px;
 }
 /*insert video gallery*/
 iframe {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 /*footer section*/
 footer {
-    background: #380058;
-    padding: 20px 23px;
-    color: white;
-    display: flex;
-    justify-content: center;
+  background: #380058;
+  padding: 20px 23px;
+  color: white;
+  display: flex;
+  justify-content: center;
 }
 /*Moderno*/
-.shadow{
-    box-shadow: 2px 2px 4px #000000
+.shadow {
+  box-shadow: 2px 2px 4px #000000;
 }
 
 /*responsive*/
 @media (max-width: 1300px) {
-    .home .max-width {
-        margin-left: 0px;
-    }
+  .home .max-width {
+    margin-left: 0px;
+  }
 }
 @media (max-width: 1104px) {
-    .about .about-content .left img {
-        height: 350px;
-        width: 350px;
-    }
-    .web .web-content .right img {
-        width: 120px;
-        height: 120px;
-        object-fit: cover;
-    }
-    iframe {
-        height: 400px !important;
-    }
+  .about .about-content .left img {
+    height: 350px;
+    width: 350px;
+  }
+  .web .web-content .right img {
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+  }
+  iframe {
+    height: 400px !important;
+  }
 }
 @media (max-width: 1115px) {
-    .max-width {
-        padding: 0 50px;
-    }
-    .menu-btn {
-        display: block;
-        z-index: 999;
-    }
-    .menu-btn i.active::before {
-        content: "X";
-        color: white;
-        font-weight: 600;
-        font-family: prompt;
-    }
-    .navbar .menu {
-        position: fixed;
-        height: 100vh;
-        background: #67009e;
-        width: 70%;
-        right: -100%;
-        top: 0;
-        text-align: center;
-        padding-top: 80px;
-        transition: all 0.3s ease;
-    }
-    .navbar .menu.active {
-        right: 0;
-    }
-    .navbar .menu li {
-        display: block;
-    }
-    .navbar .menu li a {
-        display: inline-block;
-        margin: 20px 0;
-        font-size: 20px;
-    }
-    .navbar.sticky .menu li a:hover {
-        color: #ff6600;
-    }
-    .home .home-content .text-1 {
-        font-size: 40px;
-    }
-    .max-width {
-        max-width: 800px;
-    }
-    .about .about-content .column {
-        width: 100%;
-    }
-    .about .about-content .left {
-        display: flex;
-        justify-content: center;
-        margin: 0 auto 60px;
-    }
-    .about .about-content .right {
-        flex: 100%;
-    }
-    .web .web-content .column {
-        width: 100%;
-        margin-bottom: 30px;
-    }
-    .container-pic img {
-        width: 300px;
-    }
-    .containerp {
-        flex-wrap: wrap;
-    }
-    .containerp img {
-        width: 500px;
-    }
-    video {
-        width: 700px;
-    }
+  .max-width {
+    padding: 0 50px;
+  }
+  .menu-btn {
+    display: block;
+    z-index: 999;
+  }
+  .menu-btn i.active::before {
+    content: "X";
+    color: white;
+    font-weight: 600;
+    font-family: prompt;
+  }
+  .navbar .menu {
+    position: fixed;
+    height: 100vh;
+    background: #67009e;
+    width: 70%;
+    right: -100%;
+    top: 0;
+    text-align: center;
+    padding-top: 80px;
+    transition: all 0.3s ease;
+  }
+  .navbar .menu.active {
+    right: 0;
+  }
+  .navbar .menu li {
+    display: block;
+  }
+  .navbar .menu li a {
+    display: inline-block;
+    margin: 20px 0;
+    font-size: 20px;
+  }
+  .navbar.sticky .menu li a:hover {
+    color: #ff6600;
+  }
+  .home .home-content .text-1 {
+    font-size: 40px;
+  }
+  .max-width {
+    max-width: 800px;
+  }
+  .about .about-content .column {
+    width: 100%;
+  }
+  .about .about-content .left {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto 60px;
+  }
+  .about .about-content .right {
+    flex: 100%;
+  }
+  .web .web-content .column {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .container-pic img {
+    width: 300px;
+  }
+  .containerp {
+    flex-wrap: wrap;
+  }
+  .containerp img {
+    width: 500px;
+  }
+  video {
+    width: 700px;
+  }
 }
 @media (max-width: 672px) {
-    .home .home-content .text-1 {
-        font-size: 33px;
-    }
-    iframe {
-        height: 250px !important;
-    }
-    footer {
-        font-size: 13px;
-    }
-    .container-pic img {
-        width: 170px;
-    }
-    .containerp img {
-        width: 400px;
-    }
-    .container-logo .imgcontain {
-        width: 150px;
-    }
-    .linkgit {
-        font-size: 1rem;
-    }
+  .home .home-content .text-1 {
+    font-size: 33px;
+  }
+  iframe {
+    height: 250px !important;
+  }
+  footer {
+    font-size: 13px;
+  }
+  .container-pic img {
+    width: 170px;
+  }
+  .containerp img {
+    width: 400px;
+  }
+  .container-logo .imgcontain {
+    width: 150px;
+  }
+  .linkgit {
+    font-size: 1rem;
+  }
 }
 @media (max-width: 487px) {
-    /*all page*/
-    .navbar .logo a {
-        font-size: 23px;
-    }
-    .home .home-content .text-1 {
-        font-size: 30px;
-    }
-    footer {
-        font-size: 7px;
-    }
-    section .title {
-        font-size: 25px;
-    }
-    section .title::before {
-        width: 120px;
-        height: 2px;
-    }
-    section .title::after {
-        font-size: 14px;
-    }
-    .blockmag {
-        height: 170px;
-    }
-    .mg1 {
-        height: 200px;
-    }
-    .mg2 {
-        height: 70px;
-    }
+  /*all page*/
+  .navbar .logo a {
+    font-size: 23px;
+  }
+  .home .home-content .text-1 {
+    font-size: 30px;
+  }
+  footer {
+    font-size: 7px;
+  }
+  section .title {
+    font-size: 25px;
+  }
+  section .title::before {
+    width: 120px;
+    height: 2px;
+  }
+  section .title::after {
+    font-size: 14px;
+  }
+  .blockmag {
+    height: 170px;
+  }
+  .mg1 {
+    height: 200px;
+  }
+  .mg2 {
+    height: 70px;
+  }
 
-    /*code*/
-    iframe {
-        height: 200px !important;
-    }
+  /*code*/
+  iframe {
+    height: 200px !important;
+  }
 
-    .container-pic img {
-        width: 140px;
-    }
-    .container-pic {
-        justify-content: space-between;
-    }
-    .containerp img {
-        width: 320px;
-    }
-    .video0 .max-width h1,
-    .video1 .max-width h1 {
-        font-size: 20px;
-    }
-    .video0 .max-width h2,
-    .video1 .max-width h2 {
-        font-size: 18px;
-    }
-    .video0 .max-width p,
-    .video1 .max-width p {
-        font-size: 14px;
-    }
-    .interncontainer {
-        margin-bottom: 25px;
-    }
+  .container-pic img {
+    width: 140px;
+  }
+  .container-pic {
+    justify-content: space-between;
+  }
+  .containerp img {
+    width: 320px;
+  }
+  .video0 .max-width h1,
+  .video0-1 .max-width h1,
+  .video1 .max-width h1 {
+    font-size: 20px;
+  }
+  .video0 .max-width h2,
+  .video0-1 .max-width h2,
+  .video1 .max-width h2 {
+    font-size: 18px;
+  }
+  .video0 .max-width p,
+  .video0-1 .max-width p,
+  .video1 .max-width p {
+    font-size: 14px;
+  }
+  .interncontainer {
+    margin-bottom: 25px;
+  }
 }
