update globish x bma

--- a/csscode.css
+++ b/csscode.css
@@ -153,9 +153,9 @@ section .title::after {
 }
 /* all purple background*/
 .products,
-.fusionsoft,
+.globish,
 .video3,
-.fusionsoft,
+.globish,
 .video0-1,
 .video1-1,
 .video1-2 {
@@ -165,14 +165,14 @@ section .title::after {
 .products .title::before,
 .video3 .title::before,
 .video1-1 .title::before,
-.fusionsoft .title::before,
+.globish .title::before,
 .video0-1 .title::before,
 .video1-2 .title::before {
   background: white;
 }
 .products .title::after,
 .video3 .title::after,
-.fusionsoft .title::after,
+.globish .title::after,
 .video0-1 .title::after,
 .video1-1 .title::after,
 .video1-2 .title::after {
@@ -180,6 +180,9 @@ section .title::after {
 }
 
 /*production title*/
+.globish .title::after {
+  content: "Globish Work";
+}
 .fusionsoft .title::after {
   content: "FusionSoft Work";
 }
@@ -241,13 +244,15 @@ section .title::after {
 .container p,
 .video0 .max-width p,
 .fusionsoft .max-width p,
+.globish .max-width p,
 .video0-1 .max-width p,
 .video1 .max-width p {
   font-family: prompt;
 }
 .video1 .max-width p,
-.video0 .max-width p,
 .fusionsoft .max-width p,
+.video0 .max-width p,
+.globish .max-width p,
 .video0-1 .max-width p,
 .video1-2 .max-width p {
   display: flex;
@@ -268,6 +273,7 @@ section .title::after {
 .video1 .max-width h2,
 .video0 .max-width h2,
 .fusionsoft .max-width h2,
+.globish .max-width h2,
 .video0-1 .max-width h2,
 .video1-1 .max-width h2,
 .video1-2 .max-width h2 {
@@ -457,18 +463,21 @@ footer {
   }
   .video0 .max-width h1,
   .fusionsoft .max-width h1,
+  .globish .max-width h1,
   .video0-1 .max-width h1,
   .video1 .max-width h1 {
     font-size: 20px;
   }
   .video0 .max-width h2,
   .fusionsoft .max-width h2,
+  .globish .max-width h2,
   .video0-1 .max-width h2,
   .video1 .max-width h2 {
     font-size: 18px;
   }
   .video0 .max-width p,
   .fusionsoft .max-width p,
+  .globish .max-width p,
   .video0-1 .max-width p,
   .video1 .max-width p {
     font-size: 14px;
